# tdcc

./: .gitignore  README.md  pom.xml
jni/: CLS_NVDSDKHelper.cpp  CLS_NVDSDKHelper.h  CMakeLists.txt  common.h  native_tiandi_jni.cc  native_tiandi_jni.h  native_tiandi_jni_test.cc  nvsdk_struct_utils.cc  nvsdk_struct_utils.h  nvsdk_wrapper.cc  nvsdk_wrapper.h
jni/common/: logger.cc  logger.h  time_utils.cc  time_utils.h
jni/platform/linux/: README.md
jni/platform/linux/CH-NVSDK_64/include/: DecCtrlClient.h  DecCtrlClientTypes.h  RetValue.h  x_type.h
jni/platform/windows/: README.md
jni/platform/windows/CH-NVSDK_64/include/: ActionControl.h  GlobalTypes.h  RetValue.h  net_sdk_types.h
jni/platform/windows/CH-NVSDK_64/lib/: NVDSDK.lib
src/main/java/com/gshx/camera/: Main.java
src/main/java/com/gshx/camera/tiandi/: IDecComRecvNotify.java  IDecNotify.java  ITDPostMessageNotify.java  NVSDKClient.java  NativeLoader.java  NativeTiandi.java  TCom485.java  TDDecParam.java  TDZInfoParam.java  TDecLogData.java  TDecParam.java  TDecParamBase.java  TDecProtocol.java  TEncodeChannel.java  TLocalInputChannel.java  TLogoParam.java  TNVDSdkVersion.java  TNVSFileTime.java  TNVSItem.java  TNVSItemEx.java  TPlatforminfo.java  TServerCommonInfo.java  TServerNormal.java  TServerOnvif.java  TServerRtsp.java  TSetSipVideoChannel.java  Utils.java
src/test/java/: TestNativeLoader.java  TestNativeStruct.java
